# teleport

./: .gitignore  README.md  pyproject.toml  setup.sh
figure_1_code/: make_figure_1.py
figure_1_code/src/: plotting.py
sbatch_scripts/: gpu.sh
scripts/: extract_optimal_values.py  make_figure_6.py  make_figure_7.py  make_figures_11_12.py  make_figures_4_8.py  make_figures_9_10.py  optimal_values.pkl  performance_profile.py  plot.py  run.py
scripts/exp_configs/: figure_3.py  figures_11_12.py  figures_4_8_17_18.py  figures_5_13_14.py  figures_6_15_16.py  figures_9_10.py  test.py  uci_constants.pkl  uci_optimal_value.py
scripts/plot_configs/: figure_3.py  figures_17_18.py  figures_5_13_14.py  figures_6_15_16.py
src/stepback/: base.py  metrics.py  record.py  utils.py
src/stepback/datasets/: libsvm.py  main.py  mnist.py  uci.py
src/stepback/initializers/: main.py  teleport.py
src/stepback/models/: basic_models.py  main.py
src/stepback/optim/: gd_ls.py  main.py  normalized_sgd.py
